_config.yml: add link to Google Scholar

--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ author:
   location: "Seoul, Republic of Korea"
   employer:
   pubmed:
-  googlescholar:
+  googlescholar: "https://scholar.google.com/citations?user=K_Sob5UAAAAJ"
   email: "sanha.maeng@gmail.com"
   researchgate:
   uri:
