--- a/_config.yml
+++ b/_config.yml
@@ -98,7 +98,7 @@ author:
   instagram:
   impactstory:
   lastfm:
-  linkedin: "https://www.linkedin.com/in/sanha-maeng-bb57a52b2"
+  linkedin: "sanha-maeng-bb57a52b2"
   orcid:
   pinterest:
   soundcloud:
