--- a/_config.yml
+++ b/_config.yml
@@ -98,7 +98,7 @@ author:
   instagram:
   impactstory:
   lastfm:
-  linkedin: "sanha-maeng-bb57a52b2"
+  linkedin: "sanhamaeng"
   orcid:
   pinterest:
   soundcloud:
